# simpleLinkedList

./: CMakeLists.txt  README.md
src/: main.cpp
src/classes/: EVKD.cpp  TEXT.cpp
src/header/: EVKD.h  TEXT.h  main.h
